# hipTensor

./: .clang-format  .gitignore  .markdownlint-cli2.yaml  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  Config.cmake.in  INSTALL.md  LICENSE  README.md  output
client_example/01_contraction/: CMakeLists.txt  README.md  test_bilinear_contraction_xdl_fp32.cpp  test_scale_contraction_xdl_fp32.cpp
docs/: .gitignore  API_Reference_Guide.rst  CMakeLists.txt  Contributors_Guide.rst  Doxyfile  Doxyfile.in  Linux_Install_Guide.rst  Makefile  Programmers_Guide.rst  api-reference.rst  apireference.rst  clientinstallation.rst  conf.py  contractionfunctions.rst  contributors-guide.rst  datatypes.rst  docgeneration.rst  environment.yml  functions.rst  gettingstarted.rst  helperfunctions.rst  index.rst  installation.rst  overview.rst  programmers-guide.rst  requirements.txt  what-is-hiptensor.rst
docs/.doxygen/: Doxyfile
docs/.sphinx/: _toc.yml.in  requirements.txt
docs/_build/: functions.html  genindex.html  gettingstarted.html  objects.inv
docs/_build/.doctrees/: apireference.doctree  docgeneration.doctree  environment.pickle  functions.doctree  gettingstarted.doctree  helperfunctions.doctree  index.doctree  (+1 more)
docs/api-reference/: api-reference.rst
docs/conceptual/: programmers-guide.rst
docs/contribution/: contributors-guide.rst
docs/doxygen/: Doxyfile
docs/html/: .buildinfo  apireference.html  clientinstallation.html  contractionfunctions.html  datatypes.html  docgeneration.html  functions.html  genindex.html  gettingstarted.html  helperfunctions.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js
docs/install/: installation.rst
docs/sphinx/: _toc.yml.in  requirements.txt
samples/: CMakeLists.txt  README.md  common.hpp
samples/01_contraction/: CMakeLists.txt  common.hpp  simple_bilinear_contraction.hpp  simple_bilinear_contraction_bf16.cpp  simple_bilinear_contraction_bf16_bf16_bf16_bf16_compute_bf16.cpp  simple_bilinear_contraction_cf32_cf32_cf32_cf32_compute_cf32.cpp  simple_bilinear_contraction_cf32_cf32_cf32_cf32_compute_f32.cpp  simple_bilinear_contraction_f16.cpp  simple_bilinear_contraction_f16_f16_f16_f16_compute_f16.cpp  simple_bilinear_contraction_f32.cpp  simple_bilinear_contraction_f32_f32_f32_f32_compute_bf16.cpp  simple_bilinear_contraction_f32_f32_f32_f32_compute_f16.cpp  simple_bilinear_contraction_f32_f32_f32_f32_compute_f32.cpp  simple_bilinear_contraction_f64_f64_f64_f64_compute_f32.cpp  simple_bilinear_contraction_f64_f64_f64_f64_compute_f64.cpp  simple_scale_contraction.hpp  simple_scale_contraction_bf16.cpp  simple_scale_contraction_bf16_bf16_bf16_compute_bf16.cpp  simple_scale_contraction_cf32_cf32_cf32_compute_cf32.cpp  simple_scale_contraction_cf32_cf32_cf32_compute_f32.cpp  simple_scale_contraction_doubleComplex_cpu.cpp  simple_scale_contraction_f16.cpp  simple_scale_contraction_f16_f16_f16_compute_f16.cpp  simple_scale_contraction_f32.cpp  simple_scale_contraction_f32_f32_f32_compute_bf16.cpp  simple_scale_contraction_f32_f32_f32_compute_f16.cpp  simple_scale_contraction_f32_f32_f32_compute_f32.cpp  simple_scale_contraction_f64.cpp  simple_scale_contraction_f64_f64_f64_compute_f32.cpp  simple_scale_contraction_f64_f64_f64_compute_f64.cpp  simple_scale_contraction_floatComplex_cpu.cpp  test_bilinear_contraction_xdl_fp32.cpp  test_scale_contraction_xdl_fp32.cpp
samples/02_permutation/: CMakeLists.txt  permutation.cpp
samples/03_reduction/: CMakeLists.txt  reduction.cpp
src/: CMakeLists.txt
src/contraction/: CMakeLists.txt  README.md  TODO.md  contraction.cpp  ht_contraction.cpp
src/core/: CMakeLists.txt  ht_tensor.cpp
test/: CMakeLists.txt  common.hpp  hip_resource.cpp  hip_resource.hpp  hip_resource_impl.cpp  hiptensor-test-yaml.hpp.in  hiptensor_gtest_main.cpp  hiptensor_options.hpp  hiptensor_ostream.hpp  singleton.hpp  test_contraction_xdl_fp32.cpp  utils.hpp
test/00_unit/: CMakeLists.txt  logger_test.cpp  yaml_test.cpp
test/01_contraction/: CMakeLists.txt  bilinear_contraction_ac_f32.cpp  bilinear_contraction_ac_f64.cpp  bilinear_contraction_f32.cpp  bilinear_contraction_f32_test.cpp  bilinear_contraction_f64.cpp  bilinear_contraction_f64_test.cpp  bilinear_contraction_test.cpp  common.hpp  complex_bilinear_contraction_test.cpp  complex_scale_contraction_test.cpp  contraction_common_test_params.hpp  contraction_default_test_params.hpp  contraction_mode_test.cpp  contraction_resource.cpp  contraction_resource.hpp  contraction_test.cpp  contraction_test.hpp  contraction_test_helpers.hpp  contraction_test_impl.hpp  contraction_test_params.hpp  reference_bilinear_contraction_f32.cpp  reference_scale_contraction_f32.cpp  scale_contraction_ac_f32.cpp  scale_contraction_ac_f64.cpp  scale_contraction_f32.cpp  scale_contraction_f32_test.cpp  scale_contraction_f64.cpp  scale_contraction_f64_test.cpp  scale_contraction_test.cpp  test_bilinear_contraction_xdl_fp32.cpp  test_contraction_xdl_fp32.cpp  test_scale_contraction_xdl_fp32.cpp  yaml_test.cpp
test/02_permutation/: CMakeLists.txt  permutation_column_major_test.cpp  permutation_cpu_impl_test.cpp  permutation_resource.cpp  permutation_resource.hpp  permutation_test.cpp  permutation_test.hpp  permutation_test_helpers.hpp  permutation_test_params.hpp  rank2_permutation_test.cpp  rank3_permutation_test.cpp  rank4_permutation_test.cpp  rank5_permutation_test.cpp  rank6_permutation_test.cpp
test/03_reduction/: CMakeLists.txt  rank1_reduction_test.cpp  rank2_reduction_test.cpp  rank3_reduction_test.cpp  rank4_reduction_test.cpp  rank5_reduction_test.cpp  rank6_reduction_test.cpp  reduction_cpu_impl_test.cpp  reduction_resource.cpp  reduction_resource.hpp  reduction_test.cpp  reduction_test.hpp  reduction_test_helpers.hpp  reduction_test_params.hpp
test/device/: common.hpp
test/llvm/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.hpp  hiptensor_options.cpp  hiptensor_options.hpp  yaml_parser.hpp  yaml_parser_config.cpp  yaml_parser_contraction_config.cpp  yaml_parser_impl.hpp
test/yaml/: yaml_parser_contraction_config.cpp
(+205 files in other folders)
